test/fail_compilation/bug5.d
// REQUIRED_ARGS: -w

int test1()
{
    if (false)
        return 0;
}

